# MurderMysteryGenerator

./: README.md  app.py  attampt_2.py  character_style_Combination.json  characters.md  crime_scene.md  murder_case_outline.md  plot_en.md  pyproject.toml  requirements.txt
ComfyUI Workflow/: character_style_Combination.json  main_workflow.json
ComfyUI Workflow/1822g/: character_1822g.json
ComfyUI Workflow/8432g/: character_8432g.json
ComfyUI Workflow/9198g/: character_9198.json
ComfyUI Workflow/User Defined/: User_defined_character_style_Combination.json
comfy/: Bg_remove.json  Painting Style Combination.json
comfy/0309g/: character_0309g.json
comfy/9198g/: character_9198.json
murder_mystery_generator/: characters.md  crime_scene.md  murder_case_outline.md  pyproject.toml
murder_mystery_generator/src/murder_mystery_generator/: character.py  crew.py  main.py
outputs/: characters.md  crime_scene.md  murder_case_outline.md
outputs/comfy/: characters.json
src/: websocket_client.py  websocket_client_comfy.py  websocket_comfy.py  websocket_host.py  websocket_host_comfy_1.py  websocket_host_comfy_2.py  websocket_host_gradio.py
src/MurderMysteryGenerator/: main.py
src/MurderMysteryGenerator/config/: agents.yaml
src/muder_mystery_generator/: crew.py  main.py
src/muder_mystery_generator/config/: agents.yaml  tasks.yaml
src/murder_mystery_generator/: character.py  character_info.py  crew.py  main.py
src/murder_mystery_generator/characters/: 0514g.yaml  2006g.yaml  5272g.yaml  7075g.yaml  8432g.yaml  Elvin.yaml  Jeff.yaml  Nakasuna.yaml
(+5 files in other folders)
