[project]
name = "muder_mystery_generator"
version = "0.1.0"
description = "muder_mystery_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
muder_mystery_generator = "muder_mystery_generator.main:run"
run_crew = "muder_mystery_generator.main:run"
train = "muder_mystery_generator.main:train"
replay = "muder_mystery_generator.main:replay"
test = "muder_mystery_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
